update styles slightly to use mobile first design - more to come add styles for new divs made by overlay add styles for icons in overlay make header fixed fix spacing between items in gallery - not finished

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -5,3 +5,5 @@ $color-base-mute-gray : #dddddd; // colour used in search bar border/text and it
 
 // fonts
 $base-font-size : 16px;
+$base-icon-size : 20px;
+$icon-size-20 : $base-font-size + 20;
