--- a/scss/layout/_mainheader.scss
+++ b/scss/layout/_mainheader.scss
@@ -1,5 +1,7 @@
 .main__header {
-  display: fixed;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 120px;
   background: $color-base-white;
@@ -9,7 +11,7 @@
   @include justify-content(center);
   @include align-items(center);
   .search {
-    width: 460px;
+    max-width: 460px;
     height: 45px;
     font-size: $base-font-size;
     padding: 4px;
