--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -64,6 +64,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-size: 16px;
+  overflow-x: initial;
 }
 
 h1 {
@@ -83,7 +84,9 @@ p {
 }
 
 .main__header {
-  display: fixed;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 120px;
   background: #ffffff;
@@ -99,7 +102,7 @@ p {
   align-items: center;
 }
 .main__header .search {
-  width: 460px;
+  max-width: 460px;
   height: 45px;
   font-size: 16px;
   padding: 4px;
@@ -128,23 +131,23 @@ p {
 
 .gallery {
   list-style: none;
-  width: 980px;
-  margin: 0 auto;
+  max-width: 980px;
+  margin: 90px auto 0 auto;
   display: -webkit-flex;
   display: flex;
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
   -webkit-flex-direction: row;
   flex-direction: row;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
+  -webkit-justify-content: center;
+  justify-content: center;
   -webkit-align-items: flex-start;
   align-items: flex-start;
 }
 .gallery .gallery__item {
-  max-width: calc((200 / 980) * 100%);
-  margin-bottom: calc((60 / 980) * 100%);
-  min-height: 100%;
+  max-width: 200px;
+  height: auto;
+  margin: 30px;
 }
 .gallery .gallery__item a {
   display: block;
@@ -156,7 +159,7 @@ p {
 }
 
 #woodbox__overlay {
-  position: absolute;
+  position: fixed;
   z-index: 9999;
   top: 0;
   right: 0;
@@ -167,8 +170,9 @@ p {
   background: rgba(0, 0, 0, 0.7);
   display: none;
   margin: auto;
+  overflow: hidden;
 }
-#woodbox__overlay .woodbox__inner {
+#woodbox__overlay #woodbox__inner {
   position: relative;
   margin: 0 auto;
   top: 50%;
@@ -180,9 +184,9 @@ p {
   height: 80%;
   text-align: center;
 }
-#woodbox__overlay .woodbox__inner .woodbox__media-wrap {
-  max-width: 600px;
-  height: auto;
+#woodbox__overlay #woodbox__inner .woodbox__media-wrap {
+  max-width: 250px;
+  min-height: 285px;
   position: absolute;
   margin-left: auto;
   left: 50%;
@@ -192,24 +196,82 @@ p {
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
-#woodbox__overlay .woodbox__inner .woodbox__media-wrap .woodbox__media-title {
+#woodbox__overlay #woodbox__inner .woodbox__media-wrap .woodbox__media-title {
+  display: inline-block;
   padding-bottom: 10px;
-  text-align: left;
+  float: left;
   font-size: 24px;
 }
-#woodbox__overlay .woodbox__inner .woodbox__media-wrap .woodbox__media {
+#woodbox__overlay #woodbox__inner .woodbox__media-wrap .woodbox__media-image {
+  clear: both;
   height: auto;
-  max-width: 600px;
+  max-width: 250px;
   background: #ffffff;
   margin: 0;
   padding: 0;
   -moz-box-shadow: #404040 0 0 15px;
   -webkit-box-shadow: #404040 0 0 15px;
   box-shadow: #404040 0 0 15px;
+  overflow: hidden;
 }
-#woodbox__overlay .woodbox__inner .woodbox__media-wrap .woodbox__media-caption {
+#woodbox__overlay #woodbox__inner .woodbox__media-wrap .woodbox__media-video {
+  clear: both;
+  height: auto;
+  max-width: 250px;
+  background: #ffffff;
+  margin: 0;
+  padding: 0;
+  -moz-box-shadow: #404040 0 0 15px;
+  -webkit-box-shadow: #404040 0 0 15px;
+  box-shadow: #404040 0 0 15px;
+  overflow: hidden;
+}
+#woodbox__overlay #woodbox__inner .woodbox__media-wrap .woodbox__media-caption {
   padding-top: 10px;
   width: 98%;
   text-align: center;
-  font-size: 18px;
+  font-size: 16px;
+}
+#woodbox__overlay #woodbox__inner .woodbox__media-wrap #woodbox__media-close {
+  display: inline-block;
+  float: right;
+  position: relative;
+  top: 0;
+  right: -20px;
+  font-size: 20px;
+  color: #ffffff;
+  cursor: pointer;
+}
+#woodbox__overlay #woodbox__inner .woodbox__media-wrap #woodbox__media-close:hover {
+  color: #dddddd;
+}
+#woodbox__overlay #woodbox__inner .woodbox__media-wrap #woodbox__media-close:active {
+  color: #c4c4c4;
+}
+#woodbox__overlay #woodbox__inner #woodbox__media-previous,
+#woodbox__overlay #woodbox__inner #woodbox__media-next {
+  position: absolute;
+  display: inline-block;
+  top: 45%;
+  -moz-transform: translateY(-45%);
+  -ms-transform: translateY(-45%);
+  -webkit-transform: translateY(-45%);
+  transform: translateY(-45%);
+  font-size: 20px;
+  color: #ffffff;
+  cursor: pointer;
+}
+#woodbox__overlay #woodbox__inner #woodbox__media-previous:hover,
+#woodbox__overlay #woodbox__inner #woodbox__media-next:hover {
+  color: #dddddd;
+}
+#woodbox__overlay #woodbox__inner #woodbox__media-previous:active,
+#woodbox__overlay #woodbox__inner #woodbox__media-next:active {
+  color: #c4c4c4;
+}
+#woodbox__overlay #woodbox__inner #woodbox__media-previous {
+  left: 10px;
+}
+#woodbox__overlay #woodbox__inner #woodbox__media-next {
+  right: 10px;
 }
